# openghg_defs

./: .gitattributes  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: publish.yaml  workflow.yaml
openghg_defs/: __init__.py  _load.py  _paths.py  _version.py
openghg_defs/data/: domain_info.json  site_info.json  species_info.json
recipes/: meta.yaml  upload.sh
tests/: test_loader.py  test_paths.py
