[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "openghg_defs"
dynamic = ["version"]
description = "Supplementary definition data for OpenGHG"
readme = "README.md"
requires-python = ">=3.11"

[project.urls]
"Homepage" = "https://github.com/openghg/openghg_defs"
"Bug Tracker" = "https://github.com/openghg/openghg_defs/issues"

dependencies = [
    "uv",
    "pytest>=8.4.2",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.sdist]
include = ["openghg_defs*", "recipes*"]

[tool.hatch.build.targets.wheel]
include = ["openghg_defs*", "recipes*"]

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"