[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "openghg_defs"
dynamic = ["version"]
description = "Supplementary definition data for OpenGHG"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "uv",
    "pytest>=8.4.2",
]

[project.urls]
"Homepage" = "https://github.com/openghg/openghg_defs"
"Bug Tracker" = "https://github.com/openghg/openghg_defs/issues"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.sdist]
include = ["openghg_defs*", "recipes*"]

[tool.hatch.build.targets.wheel]
include = ["openghg_defs*", "recipes*"]

[tool.uv-dynamic-versioning]
pattern = "default-unprefixed"
fallback-version = "0.0.0"
enable = true
vcs = "git"
style = "pep621"
metadata = false  # This disables the +hash local identifier