[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "openghg_defs"
dynamic = ["version"]
description = "Supplementary definition data for OpenGHG"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "uv",
    "pytest<=7.0.0",
]

[project.urls]
"Homepage" = "https://github.com/openghg/openghg_defs"
"Bug Tracker" = "https://github.com/openghg/openghg_defs/issues"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.sdist]
include = ["openghg_defs*", "recipes*"]

[tool.hatch.build.targets.wheel]
include = ["openghg_defs*", "recipes*"]

[tool.uv-dynamic-versioning]
pattern = "default-unprefixed"
fallback-version = "0.0.0"